--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -16,6 +16,11 @@ jobs:
       EXDIR: acap/examples/$EXNAME
     steps:
       - uses: actions/checkout@v3
+      - name: Install Snyk
+        run: |
+          curl -sL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+          sudo apt-get install -y nodejs
+          sudo npm install -g snyk
 
       - name: Build ${{ env.EXNAME }} application
         env:
@@ -23,9 +28,23 @@ jobs:
         run: |
           docker image rm -f $imagetag
           cd $EXNAME
-          docker build --no-cache --tag $imagetag --build-arg ARCH=${{ matrix.arch }} .
+          docker build --no-cache --tag $imagetag --build-arg ARCH=${{ matrix.arch }} .-snyk
           docker cp $(docker create $imagetag):/opt/app ./build
           cd ..
           docker image rm -f $imagetag
+      
+      - name: Install Snyk CLI
+      run: |
+        curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
+        sudo apt-get install -y nodejs
+        sudo npm install -g snyk
+      
+      - name: Snyk scan
+        run: snyk test --docker my-image
+        env:
+          imagetag: ${{ env.EXREPO }}_${{ env.EXNAME }}:1.0
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      
 
  
