--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -16,19 +16,13 @@ jobs:
       EXDIR: acap/examples/$EXNAME
     steps:
       - uses: actions/checkout@v3
-      - name: Install Snyk
-        run: |
-          curl -sL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-          sudo apt-get install -y nodejs
-          sudo npm install -g snyk
-
       - name: Build ${{ env.EXNAME }} application
         env:
           imagetag: ${{ env.EXREPO }}_${{ env.EXNAME }}:1.0
         run: |
           docker image rm -f $imagetag
           cd $EXNAME
-          docker build --no-cache --tag $imagetag --build-arg ARCH=${{ matrix.arch }} .-snyk
+          docker build --no-cache --tag $imagetag --build-arg ARCH=${{ matrix.arch }} .
           docker cp $(docker create $imagetag):/opt/app ./build
           cd ..
           docker image rm -f $imagetag
