--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -35,10 +35,12 @@ jobs:
           sudo npm install -g snyk
         
       - name: Snyk scan
-        run: snyk test --docker ${imagetag}
         env:
           imagetag: ${{ env.EXREPO }}_${{ env.EXNAME }}:1.0
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        run: |
+          snyk test --docker ${imagetag}
+        
 
       
 
