--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -40,12 +40,13 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
           snyk test --docker ${imagetag}
-          
-      - name: Upload results to Snyk
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: |
           snyk monitor --file=snyk_results.json --org=nodeFade --project-name=hello-world-with-snyk
+          
+      # - name: Upload results to Snyk
+      #   env:
+      #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      #   run: |
+      #     snyk monitor --file=snyk_results.json --org=nodeFade --project-name=hello-world-with-snyk
 
 
       
