--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -40,6 +40,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
           snyk test --severity-threshold=high,critical,medium --docker ${imagetag}
+          continue-on-error: true
           snyk monitor --file=snyk_results.json --org=nodeFade --project-name=hello-world-with-snyk
           
       # - name: Upload results to Snyk
