Build then snyk

--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -45,6 +45,8 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
+          pwd 
+          ls
           snyk monitor --file=snyk_results.json --org=nodeFade --project-name=hello-world-with-snyk
 
 
