--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           ls
           snyk test --package-manager=npm
-          snyk monitor --file=.\snyk_results.json --org=nodeFade --project-name=hello-world
+          snyk monitor --file=/home/runner/work/experiment-fb/snyk_results.json --org=nodeFade --project-name=hello-world
 
 
       
