--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -57,7 +57,7 @@ jobs:
           
           # Basic authentication credentials
           JF_USER: ${{ secrets.ARTIFACTORY_USERNAME }}
-          JF_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORDD }}
+          JF_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
       - run: |
           jf rt ping
 
